--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,5 +1,5 @@
 <!-- start custom footer snippets -->
 
-<a href="/contact/">Contact</a> &#183; <a href="/privacy/">Terms &amp; Privacy Policy</a> &#183; <a href="/sitemap/">Sitemap</a>
+<a href="/contact/">Contact</a> &#183; <a href="/privacy/">Terms &amp; Privacy Policy</a> &#183; 
 
 <!-- end custom footer snippets -->
